--- a/Game/Script/Styling/Variables.css
+++ b/Game/Script/Styling/Variables.css
@@ -4,82 +4,82 @@
     --text_font: "Inter";
 
     /* Game Variables */
-    --background_fade_1: #5BB8BC;
-    --background_fade_2: #5071A7;
+    --background_fade_1: var(--cyan_fade);
+    --background_fade_2: var(--blue_fade);
     --background_fade: linear-gradient(var(--background_fade_1), var(--background_fade_2));
 
-    --text_color: white;
+    --text_color: var(--white);
     --box_shadow: 0 0.2em 0.2em rgba(0, 0, 0, 0.25);
     --text_shadow: 0vi 0.4vi 0.4vi rgba(0, 0, 0, 0.25);
     --text_placeholder: rgba(255, 255, 255, 0.5);
 
     /* Menu Variables */
-    --menu_title_color: white;
+    --menu_title_color: var(--white);
     --menu_title_fontsize: 5vi;
-    --menu_buttons_background: #2F4260;
-    --menu_buttons_color: white;
+    --menu_buttons_background: var(--blue);
+    --menu_buttons_color: var(--white);
     --menu_buttons_fontsize: 4vi;
-    --menu_next_buttons: #2A3546;
+    --menu_next_buttons: var(--blue_dark);
     --menu_next_buttons_fontsize: 4.5vi;
 
     /* Lobby Variables */
-    --lobby_portrait_color: white;
-    --lobby_portrait_background: #2F4260;
+    --lobby_portrait_color: var(--white);
+    --lobby_portrait_background: var(--blue);
     --lobby_portrait_background_inactive: rgba(47, 66, 96, 0.5);
-    --lobby_text: white;
+    --lobby_text: var(--white);
     --lobby_text_inactive: rgba(255, 255, 255, 0.5);
-    --lobby_names_background: #3E5373;
+    --lobby_names_background: var(--blue_light);
     --lobby_names_fontsize: 1.5vi;
-    --lobby_remove_button_background: #CF4C4C;
+    --lobby_remove_button_background: var(--red_light);
 
     /* Transition Variables */
-    --transition_text_color: white;
+    --transition_text_color: var(--white);
     --transition_text_fontsize: 10vi;
     --transition_text_wordspacing: 3vi;
 
     /* Hud Variables */
-    --hud_background: #313131;
+    --hud_background: var(--black);
 
     /* Category Panel Variables */
-    --category_background: #313131;
-    --category_header: #36417E;
-    --category_buttons: #4A4A4A;
-    --category_buttons_disabled: #202020;
-    --category_title_fontcolor: white;
+    --category_background: var(--black);
+    --category_header: var(--blue_highlight);
+    --category_buttons: var(--gray);
+    --category_buttons_disabled: var(--black_darkest);
+    --category_title_fontcolor: var(--white);
     --category_title_fontsize: 5vi;
-    --category_points_fontcolor: white;
+    --category_points_fontcolor: var(--white);
     --category_points_fontsize: 4vi;
 
     /* Summary Panel Variables */
-    --summary_background: #313131;
-    --summary_sub_background: #2B2B2B;
-    --summary_border: 0.1vw solid #444444;
-    --summary_text_color: white;
+    --summary_background: var(--black);
+    --summary_sub_background: var(--black_darker);
+    --summary_border: 0.1vw solid var(--gray);
+    --summary_text_color: var(--white);
     --summary_text_fontsize: 3vi;
 
     /* Placements Panel Variables */
-    --placements_title_color: white;
+    --placements_title_color: var(--white);
     --placements_title_fontsize: 5vi;
-    --placements_portrait_background: #2F4260;
-    --placements_names_background: #3E5373;
-    --placements_names_color: white;
+    --placements_portrait_background: var(--blue);
+    --placements_names_background: var(--blue_light);
+    --placements_names_color: var(--white);
     --placements_names_fontsize: 1.5vi;
-    --placements_points_background: white;
-    --placements_points_color: #3E5373;
+    --placements_points_background: var(--white);
+    --placements_points_color: var(--blue_light);
     --placements_points_fontsize: 2vi;
-    --placements_phrase_color: white;
+    --placements_phrase_color: var(--white);
     --placements_phrase_fontsize: 3vi;
     --placements_medals_fontsize: 1.8vi;
-    --placements_medals_4plus_color: white;
-    --placements_medals_4plus_background: #2F4260;
-    --placements_medals_4plus_bordercolor: #1a2638;
-    --placements_medals_3_color: #64461a;
-    --placements_medals_3_background: #c58f3d;
-    --placements_medals_3_bordercolor: #64461a;
-    --placements_medals_2_color: #919191;
-    --placements_medals_2_background: #F2F2F2;
-    --placements_medals_2_bordercolor: #919191;
-    --placements_medals_1_color: #6d6200;
-    --placements_medals_1_background: #EDD500;
-    --placements_medals_1_bordercolor: #6d6200;
+    --placements_medals_4plus_color: var(--medal_font);
+    --placements_medals_4plus_background: var(--medal_main);
+    --placements_medals_4plus_bordercolor: var(--medal_sub);
+    --placements_medals_3_color: var(--third_medal_sub);
+    --placements_medals_3_background: var(--third_medal_main);
+    --placements_medals_3_bordercolor: var(--third_medal_sub);
+    --placements_medals_2_color: var(--second_medal_sub);
+    --placements_medals_2_background: var(--second_medal_main);
+    --placements_medals_2_bordercolor: var(--second_medal_sub);
+    --placements_medals_1_color: var(--first_medal_sub);
+    --placements_medals_1_background: var(--first_medal_main);
+    --placements_medals_1_bordercolor: var(--first_medal_sub);
 }
