--- a/Game/Script/Styling/ColorPalette.css
+++ b/Game/Script/Styling/ColorPalette.css
@@ -7,7 +7,7 @@
     --black_darker: #2b2b2b;
     --black_darkest: #202020;
 
-    --cyan_fade: #3cff00;
+    --cyan_fade: #5BB8BC;
     --blue_fade: #5071A7;
 
     --blue_darker: #1A2638;
