--- a/Game/Script/Styling/DiceCup.css
+++ b/Game/Script/Styling/DiceCup.css
@@ -54,3 +54,34 @@ button {
 .emptyBackground {
   background: var(--background_fade);
 }
+
+
+
+.scrollContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  overflow: hidden;
+}
+
+.scrollText {
+  transform: translateX(0);
+  -moz-animation: horizontalScroll 5s linear infinite;
+  -webkit-animation: horizontalScroll 5s linear infinite;
+  animation: horizontalScroll 5s linear infinite;
+}
+
+@keyframes horizontalScroll {
+  0% {
+    transform: translateX(100%);
+  }
+  50% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
