--- a/Game/Script/Styling/Components/Transitions.css
+++ b/Game/Script/Styling/Components/Transitions.css
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100%;
     z-index: 10;
-    background: var(--background_fade);
+    /* background: var(--background_fade); */
     word-spacing: var(--transition_text_wordspacing);
     font-size: var(--transition_text_fontsize);
     color: var(--transition_text_color);
