feat: test menu animation

--- a/Game/Script/Styling/Components/Menu.css
+++ b/Game/Script/Styling/Components/Menu.css
@@ -3,7 +3,7 @@
     width: 100%;
     position: absolute;
     display: flex;
-    background: var(--background_fade);
+    /* background: var(--background_fade); */
 }
 
 #mainMenu_id {
