--- a/Game/Script/Styling/Components/Menu.css
+++ b/Game/Script/Styling/Components/Menu.css
@@ -261,10 +261,81 @@
     font-size: var(--menu_next_buttons_fontsize);
 }
 
-#multiplayerMenuMidButtonArea_id {
-    width: 30%;
+#optionsContentContainer_id {
+    background: rgba(47, 66, 96, 0.5);;
+    border-radius: 5vh;
+    overflow: hidden;
+    font-family: var(--text_font);
+    font-size: 2.5vi;
+    color: white;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: repeat(auto-fill, 30%);
+    text-align: center;
+    padding: 1%;
 }
 
-#multiplayerMenuRightButtonArea_id {
-    width: 45%;
+#optionsSoundControlContainer_id {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1vw;
+}
+
+.optionsSwitchVolume {
+    border-width: 0;
+    background: transparent;
+    height: 100%;
+}
+
+.optionsSwitchVolumeIcons {
+    height: 50%;
+    width: 1vw;
+}
+
+#optionsSoundControl_id {
+    width: 20%;
+    text-align: center;
+    overflow: hidden;
+}
+
+#optionsLanguageContainer_id {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+#optionsLanguageButton_id {
+    width: 30%;
+    background: none;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-family: var(--text_font);
+    font-size: 2.5vi;
+}
+
+.optionsLanguageMenu {
+    display: none;
+    position: absolute;
+    z-index: 1;
+}
+
+.optionsLanguageMenuContent {
+    color: white;
+    background: rgba(47, 66, 96, 0.5);
+    cursor: pointer;
+    font-family: var(--text_font);
+    font-size: 2.5vi;
+    padding: 5%;
+    border: none;
+    text-decoration: none;
+    display: block;
+  }
+
+.optionsShowLanguages {
+    display: block;
 }
