--- a/Game/Script/Styling/Components/Summary.css
+++ b/Game/Script/Styling/Components/Summary.css
@@ -33,11 +33,13 @@
 .summaryHidden {
     transition: transform 1s linear;
     transform: translateY(200%);
+    will-change: transform;
 }
 
 .summaryShown {
     transition: transform 1s linear;
     transform: translateY(0%);
+    will-change: transform;
 }
 
 .summaryImgContainer {
