--- a/Game/Script/Styling/DiceCup.css
+++ b/Game/Script/Styling/DiceCup.css
@@ -15,6 +15,35 @@ html, body {
   -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
 }
 
+#loadingScreen {
+  width: 100%; 
+  height: 100%; 
+  background: #1C1C1C; 
+  display: flex; 
+  flex-direction: column;
+  justify-content: center; 
+  align-items: center;
+  z-index: 20;
+}
+
+#loadingImg {
+  width: 20%;
+  transition: all 0.5s ease-in;
+  animation-name:             scale; 
+  animation-duration:         1s; 
+  animation-iteration-count:  infinite;
+  animation-timing-function: linear; 
+}
+
+@keyframes scale {
+  0%, 100% {
+      transform: scale(100%);
+  }
+  50% { 
+      transform: scale(90%);
+  }
+}
+
 canvas.fullscreen { 
   height: 100%;
   width: 100%;
