--- a/Game/Script/Styling/Menu/MultiplayerMenu.css
+++ b/Game/Script/Styling/Menu/MultiplayerMenu.css
@@ -10,3 +10,42 @@
 #multiplayerMenuRightButtonArea_id{
     width: 50%
 }
+
+#multiplayerMenuContent_id {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    min-height: 50%;
+}
+
+#multiplayerContentContainer_id {
+    width: 96%;
+    height: 100%;
+    background: rgba(47, 66, 96, 0.5);
+    border-radius: 5vh;
+    overflow: hidden;
+    overflow-y: auto;
+}
+
+.serverListRow {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    grid-template-columns: 12% 58% 20% 10%;
+    width: 100%;
+    height: 22.5%;
+}
+
+.serverListContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    border: 1px solid #2F5A79;
+}
+
+.serverListIcons {
+    height: 60%;
+    aspect-ratio: 1/1;
+}
