--- a/Game/Script/Styling/DiceCup.css
+++ b/Game/Script/Styling/DiceCup.css
@@ -116,3 +116,25 @@ button {
     transform: translateX(100%);
   }
 }
+
+::-webkit-scrollbar {
+  width: 0.8vw;
+  position: absolute;
+  transform: translateX(10px);
+}
+
+::-webkit-scrollbar-track {
+  background: #416587;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5vh;
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: #FFFFFF;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5vh;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.25);
+}
