--- a/Game/Script/Styling/Menu/MultiplayerMenu.css
+++ b/Game/Script/Styling/Menu/MultiplayerMenu.css
@@ -20,21 +20,31 @@
 }
 
 #multiplayerContentContainer_id {
-    width: 96%;
     height: 100%;
-    background: rgba(47, 66, 96, 0.5);
-    border-radius: 5vh;
+    width: 96%;
     overflow: hidden;
     overflow-y: auto;
+    border-radius: 5vh;
+    background: var(--serverlist_background_color);
 }
 
 .serverListRow {
+    padding: 0;
+    background: none;
+    border: none;
     display: grid;
     justify-items: center;
     align-items: center;
     grid-template-columns: 12% 58% 20% 10%;
     width: 100%;
     height: 22.5%;
+    font-family: var(--text_font);
+    font-size: var(--serverlist_fontsize);
+    color: var(--serverlist_color);
+}
+
+.serverListRow:focus {
+    background: var(--serverlist_background_color_focus);
 }
 
 .serverListContainer {
@@ -42,10 +52,11 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    border: 1px solid #2F5A79;
+    width: 100%;
+    border: var(--serverlist_cell_border);
 }
 
 .serverListIcons {
-    height: 60%;
+    height: 7vh;
     aspect-ratio: 1/1;
 }
