--- a/Game/Script/Styling/DiceCup.css
+++ b/Game/Script/Styling/DiceCup.css
@@ -120,7 +120,8 @@ button {
 ::-webkit-scrollbar {
   width: 0.8vw;
   position: absolute;
-  transform: translateX(10px);
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 ::-webkit-scrollbar-track {
