--- a/Game/Script/Styling/Variables.css
+++ b/Game/Script/Styling/Variables.css
@@ -9,9 +9,9 @@
     --background_fade: linear-gradient(var(--background_fade_1), var(--background_fade_2));
 
     --text_color: var(--white);
-    --box_shadow: 0 0.2em 0.2em rgba(0, 0, 0, 0.25);
-    --text_shadow: 0vi 0.4vi 0.4vi rgba(0, 0, 0, 0.25);
-    --text_placeholder: rgba(255, 255, 255, 0.5);
+    --box_shadow: 0 0.2em 0.2em var(--black_shadow);
+    --text_shadow: 0vi 0.4vi 0.4vi var(--black_shadow);
+    --text_placeholder: var(--white_shadow);
 
     /* Menu Variables */
     --menu_title_color: var(--white);
@@ -27,25 +27,27 @@
     --menu_help_color: var(--white);
     --menu_help_fontsize: 3vi;
     --menu_help_sub_fontsize: 2.4vi;
+    --menu_online_status_fontsize: 1.2vi;
+    --menu_online_status_color: var(--white_shadow);
 
     /* Lobby Variables */
     --lobby_portrait_color: var(--white);
     --lobby_portrait_background: var(--blue);
-    --lobby_portrait_background_inactive: rgba(47, 66, 96, 0.5);
+    --lobby_portrait_background_inactive: var(--blue_shadow);
     --lobby_text: var(--white);
     --lobby_alert_color: var(--white);
     --lobby_alert_fontsize: 2.5vi;
-    --lobby_text_inactive: rgba(255, 255, 255, 0.5);
+    --lobby_text_inactive: var(--white_shadow);
     --lobby_names_background: var(--blue_light);
     --lobby_names_fontsize: 1.5vi;
     --lobby_remove_button_background: var(--red_light);
 
     /* Serverlist Variables */
-    --serverlist_background_color: rgba(47, 66, 96, 0.5);
-    --serverlist_background_color_focus: rgba(0, 0, 0, 0.2);
+    --serverlist_background_color: var(--blue_shadow);
+    --serverlist_background_color_focus: var(--black_shadow);
     --serverlist_color: var(--white);
     --serverlist_fontsize: 2.5vi;
-    --serverlist_cell_border: 0.0001px solid var(--blue_lighter);
+    --serverlist_cell_border: 0.001vh solid var(--blue_lighter);
 
     /* Transition Variables */
     --transition_text_color: var(--white);
