feat: add new icons, new name submit button and change username/roomname

--- a/Game/Script/Styling/DiceCup.css
+++ b/Game/Script/Styling/DiceCup.css
@@ -64,6 +64,13 @@ button {
   cursor: pointer;
 }
 
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+
 .diceCupButtons {
   border-width: 0;
   border-radius: 2vw;
