--- a/Game/Script/Styling/Menu/MultiplayerMenu.css
+++ b/Game/Script/Styling/Menu/MultiplayerMenu.css
@@ -104,6 +104,7 @@
 }
 
 .passwordTitle {
+    text-transform: uppercase;
     font-family: var(--text_font);
     text-shadow: var(--text_shadow);
     color: var(--serverlist_password_color);
@@ -144,9 +145,10 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    width: 15%;
     border: 0;
     padding: 0;
+    padding-left: 1%;
+    padding-right: 1%;
     margin: 0;
     border-radius: 3vh;
     font-family: var(--main_font);
